sql/ha_partition.cc
@@ -186,7 +186,7 @@ ha_partition::ha_partition(TABLE_SHARE *share)
 ha_partition::ha_partition(partition_info *part_info)
   :handler(&partition_hton, NULL), m_part_info(part_info),
    m_create_handler(TRUE),
-   m_is_sub_partitioned(is_sub_partitioned(m_part_info))
+   m_is_sub_partitioned(m_part_info->is_sub_partitioned())
 
 {
   DBUG_ENTER("ha_partition::ha_partition(part_info)");
@@ -331,7 +331,7 @@ int ha_partition::ha_initialise()
 
   if (m_create_handler)
   {
-    m_tot_parts= get_tot_partitions(m_part_info);
+    m_tot_parts= m_part_info->get_tot_partitions();
     DBUG_ASSERT(m_tot_parts > 0);
     if (new_handlers_from_part_info())
       DBUG_RETURN(1);
@@ -1290,7 +1290,7 @@ int ha_partition::change_partitions(HA_CREATE_INFO *create_info,
   DBUG_ENTER("ha_partition::change_partitions");
 
   m_reorged_parts= 0;
-  if (!is_sub_partitioned(m_part_info))
+  if (!m_part_info->is_sub_partitioned())
     no_subparts= 1;
 
   /*
@@ -1453,7 +1453,7 @@ int ha_partition::change_partitions(HA_CREATE_INFO *create_info,
       if (part_elem->part_state == PART_CHANGED ||
           (part_elem->part_state == PART_TO_BE_ADDED && temp_partitions))
         name_variant= TEMP_PART_NAME;
-      if (is_sub_partitioned(m_part_info))
+      if (m_part_info->is_sub_partitioned())
       {
         List_iterator<partition_element> sub_it(part_elem->subpartitions);
         uint j= 0, part;
